--- a/templates/form.html
+++ b/templates/form.html
@@ -129,6 +129,7 @@
             </select>
             
             <div id="topicsSection" class="topics-section" style="display: none;">
+                <!-- Aptitude -->
                 <h2>Aptitude</h2>
                 <label class="checkbox-container">
                     <input type="checkbox" name="topics" value="II - Year | Numbers and Percentage">
@@ -199,6 +200,10 @@
                     <span>IV - Year | Direction, Distance & Puzzle</span>
                 </label>
                 <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Venn Diagram ,Data Sufficiency">
+                    <span>IV - Year | Venn Diagram ,Data Sufficiency</span>
+                </label>
+                <label class="checkbox-container">
                     <input type="checkbox" name="topics" value="IV - Year | Verbal Reasoning ,Cause & Effect">
                     <span>IV - Year | Verbal Reasoning ,Cause & Effect</span>
                 </label>
@@ -206,7 +211,7 @@
                     <input type="checkbox" name="topics" value="IV - Year | Modifiers">
                     <span>IV - Year | Modifiers</span>
                 </label>
-
+            
                 <!-- Verbal Ability -->
                 <h2>Verbal Ability</h2>
                 <label class="checkbox-container">
@@ -233,53 +238,102 @@
                     <input type="checkbox" name="topics" value="IV - Year | Critical Thinking & Sentence Completion">
                     <span>IV - Year | Critical Thinking & Sentence Completion</span>
                 </label>
-
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Selecting Words, Sentence Pattern & Ordering of Words">
+                    <span>IV - Year | Selecting Words, Sentence Pattern & Ordering of Words</span>
+                </label>
+            
                 <!-- Soft Skills -->
                 <h2>Soft Skills</h2>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="II - Year | Active Listening ,Interpersonal Skills & Emotional Intelligence">
-                    <span>II - Year | Active Listening ,Interpersonal Skills & Emotional Intelligence</span>
+                    <input type="checkbox" name="topics" value="II - Year | Personality development, Self Awareness & Physical Wellbeing">
+                    <span>II - Year | Personality development, Self Awareness & Physical Wellbeing</span>
                 </label>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="III - Year | Communication Skills, Teamwork & Problem Solving">
-                    <span>III - Year | Communication Skills, Teamwork & Problem Solving</span>
+                    <input type="checkbox" name="topics" value="III - Year | Leadership Skills, Team Work, Adaptability & Problem Solving Skills">
+                    <span>III - Year | Leadership Skills, Team Work, Adaptability & Problem Solving Skills</span>
                 </label>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="IV - Year | Adaptability ,Time Management & Conflict Resolution">
-                    <span>IV - Year | Adaptability ,Time Management & Conflict Resolution</span>
+                    <input type="checkbox" name="topics" value="IV - Year | Adaptability, Time Management & Conflict Resolution">
+                    <span>IV - Year | Adaptability, Time Management & Conflict Resolution</span>
                 </label>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="IV - Year | Decision Making ,Leadership">
-                    <span>IV - Year | Decision Making ,Leadership</span>
+                    <input type="checkbox" name="topics" value="IV - Year | Decision Making, Leadership">
+                    <span>IV - Year | Decision Making, Leadership</span>
                 </label>
-
+            
                 <!-- Technical -->
                 <h2>Technical</h2>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="II - Year | Basics of Computer Programming & Networking">
-                    <span>II - Year | Basics of Computer Programming & Networking</span>
+                    <input type="checkbox" name="topics" value="II - Year | C & C++ Basics">
+                    <span>II - Year | C & C++ Basics</span>
                 </label>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="III - Year | Data Structures, Algorithms & Databases">
-                    <span>III - Year | Data Structures, Algorithms & Databases</span>
+                    <input type="checkbox" name="topics" value="III - Year | Array, String, Functions Looping">
+                    <span>III - Year | Array, String, Functions Looping</span>
                 </label>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="III - Year | Operating Systems & Computer Architecture">
-                    <span>III - Year | Operating Systems & Computer Architecture</span>
+                    <input type="checkbox" name="topics" value="III - Year | Basics of Auto CAD">
+                    <span>III - Year | Basics of Auto CAD</span>
                 </label>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="IV - Year | Web Technologies, Software Engineering & Project Management">
-                    <span>IV - Year | Web Technologies, Software Engineering & Project Management</span>
+                    <input type="checkbox" name="topics" value="IV - Year | Coding and Decoding, Data Interpretation">
+                    <span>IV - Year | Coding and Decoding, Data Interpretation</span>
                 </label>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="IV - Year | Advanced Topics in AI, Machine Learning & Big Data">
-                    <span>IV - Year | Advanced Topics in AI, Machine Learning & Big Data</span>
+                    <input type="checkbox" name="topics" value="IV - Year | Basic Programming Skills">
+                    <span>IV - Year | Basic Programming Skills</span>
                 </label>
                 <label class="checkbox-container">
-                    <input type="checkbox" name="topics" value="IV - Year | Cybersecurity & Cloud Computing">
-                    <span>IV - Year | Cybersecurity & Cloud Computing</span>
+                    <input type="checkbox" name="topics" value="IV - Year | Data Structures">
+                    <span>IV - Year | Data Structures</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | OOPS concept (Inheritance, Class, Polymorphism, Constructor, Destructor, Friend Function)">
+                    <span>IV - Year | OOPS concept (Inheritance, Class, Polymorphism, Constructor, Destructor, Friend Function)</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Algorithms (Sorting/ Searching)">
+                    <span>IV - Year | Algorithms (Sorting/ Searching)</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Structural Architecture & STAAD Pro">
+                    <span>IV - Year | Structural Architecture & STAAD Pro</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Revit Architecture">
+                    <span>IV - Year | Revit Architecture</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Advanced Auto CAD">
+                    <span>IV - Year | Advanced Auto CAD</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Fundamental on REBAR Analysis">
+                    <span>IV - Year | Fundamental on REBAR Analysis</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | CIM">
+                    <span>IV - Year | CIM</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Metrology & Inspection">
+                    <span>IV - Year | Metrology & Inspection</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Fundamentals of Auto CAD (Engineering Drawing)">
+                    <span>IV - Year | Fundamentals of Auto CAD (Engineering Drawing)</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Robotics and Automation">
+                    <span>IV - Year | Robotics and Automation</span>
+                </label>
+                <label class="checkbox-container">
+                    <input type="checkbox" name="topics" value="IV - Year | Machine Design">
+                    <span>IV - Year | Machine Design</span>
                 </label>
             </div>
+            
 
             <div class="submit-button">
                 <input type="submit" value="Submit">
