small patch 2 | update

--- a/templates/form.html
+++ b/templates/form.html
@@ -106,6 +106,10 @@
             margin-top: 20px;
             font-style: italic;
         }
+        .declare{
+            display: flex;
+            flex-direction: row;
+        }
     </style>    
 </head>
 <body>
@@ -351,6 +355,21 @@
                     <input type="checkbox" name="topics" value="IV - Year | Machine Design">
                     <span>IV - Year | Machine Design</span>
                 </label>
+            </div>
+
+            <div class="declaration">
+                <h2>Notes:</h2>
+                <ul>
+                    <li>Chosen topics are subjected to Change/ Alteration.</li>
+                    <li>Selection of Faculties and their chosen topics will be decided on the basis of " First Come First Serve "</li>
+                    <li>
+                        Classes should be taken as per the guidelines provided.</li>
+                </ul>
+                   
+               <div class="declare">
+                <input type="checkbox" class="checkbox" style="display: block;" required><p>I, hereby, declare that I agree with the terms and conations issued with regard to
+                    the Placement Classes.</p>
+               </div>
             </div>
             
 
