--- a/templates/form.html
+++ b/templates/form.html
@@ -128,10 +128,16 @@
                 <option value="ECE">ECE</option>
                 <option value="MECH">MECH</option>
                 <option value="CIVIL">CIVIL</option>
+                <option value="placement_officie" style="text-transform: uppercase;">Placement Office</option>
+                <option value="library" style="text-transform: uppercase;">Library</option>
             </select><br>
 
             <label for="email">Mail ID:</label>
             <input type="email" id="email" name="email" required><br>
+
+            <label for="phone">Phone:</label>
+            <input type="text" id="phone" name="phone" required><br>
+            
 
             <label for="qualification">Qualification:</label>
             <input type="text" id="qualification" name="qualification"><br>
